--- a/changelog.txt
+++ b/changelog.txt
@@ -41,3 +41,4 @@ Bob's Beer:
 +Added Man in Robes event. It was in the source, but not accessible.
 -Apologizing to an 'insulted!' event resulted in getting kicked back to Shady Shops. Fixed.
 -Brawls produced way too much stuff in the daily news. Fixed.
+-It was impossible to have the best two thief statuses when trying (T)hievery. Fixed (now an assassin can eventually become a 'master thief')
