--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,6 @@
+Text:
+-Fixed dozens of spelling mistakes. There are certainly many more.
+
 Dungeon:
 -Fixed backstab command in classic mode (R)
 -Fixed index error in monster defense code (R)
@@ -7,13 +10,13 @@ Dungeon:
 -Optimized l)ook code
 
 Steroids shop:
--Bad error causing drug 10 to add very little strength and remove very little mental stability
+-Bad error causing steroid 10 to add very little strength and remove very little mental stability
 
 Beer stealing:
 -Experience was not properly split with teammate. Fixed.
 -After stealing is complete, experience gained and number of dogs/sons killed was not reported accurately. Fixed.
 -Dark deed was used up even when 0)abort was chosen. Fixed. (Now you can use the bones option to determine number of dogs without wasting a dark deed, but I think this is better than penalizing for aborting.)
--Son stamina was not reset when stealing again without returning to dark deeds menu. Fixed.
+-Son stamina was not reset when stealing again. Fixed.
 -Dog order was only randomized when you r)eturned and then b)eer stealing. Fixed (now it randomizes every time you g)o)
 -More exp is given now for knocking out sons (previously they yielded the same exp as dogs, but sons are much harder to kill)
 -Number of dogs and sons killed is reported separately now
@@ -29,7 +32,7 @@ Groggo's:
 -Magicians, sages, clerics, and alchemists were supposed to be less susceptible to demons and diseases, but a nasty bug caused them to be _most_ susceptible. Fixed.
 
 Maintenance:
--Removed the "could not find street-talk files" message that began every maintenance session
+-Fixed the "could not find street-talk files" message that began every maintenance session
 -Sped up maintenance by reducing NPC marriage attempts
 
 Daily News:
@@ -44,3 +47,11 @@ Bob's Beer:
 -It was impossible to have the best two thief statuses when trying (T)hievery. Fixed (now an assassin can eventually become a 'master thief')
 -In the drinking competition, choice of drink did not influence anything. Fixed (now stronger drinks lead to shorter competitions)
 -In the drinking competition, messages for out-of-competition participants were not shown. Also, 'glug' messages for participants were sometimes not shown. Fixed.
+
+New Player Sequence:
+-No more y/n on each behavior line entered. It was way too many questions for a new user, and they can change this behavior easily from the status screen.
+-Stats was displayed twice for a new user. Fixed.
+-New users were asked their opinion of the king, even though they can't possibly know anything yet. Fixed.
+
+Mail:
+-When you were not allowed to play further (0 res.), each (p)lay would read one remaining letter from the mail and then exit without giving you time to read the mail. Fixed.
