--- a/changelog.txt
+++ b/changelog.txt
@@ -13,6 +13,13 @@ Statistics:
 Gym:
 -Disabled dumb-bells option; Jakob wrote no code for this
 
+Dorm:
+-(p)ickpocket -> (p)otions -> kill opponent could result in a "you took 0 healing potions" message if your kill caused the opponent to waste all potions. Fixed.
+
+Quests:
+-NPC-created quests caused exception violation and fatal exit. Perhaps fixed (not sure).
+-NPC quests could be created so that a "reward" is 0. Fixed.
+
 ----------
 
 Version 0.23b:
