--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,7 @@
+***************RESET MONSTER DATAFILES***************
+
+When upgrading to this release, you must use the editor to reset the monster datafiles. Choose Reset, then check the Monsters checkbox. The game will crash if you don't do this. Further details on why this happened below.
+
 Groggo's:
 -When it was 'unfair' to cast a disease on someone, it was possible that follow-up questions would be asked anyway. Fixed.
 
@@ -18,11 +22,15 @@ Dorm:
 -(p)ickpocket -> (p)otions -> kill opponent could result in a "you took 0 healing potions" message if your kill caused the opponent to waste all potions. Fixed.
 
 Quests:
--NPC-created quests caused exception violation and fatal exit. Perhaps fixed (not sure).
+-NPC-created quests caused exception violation and fatal exit. Fixed.
 -NPC quests could be created so that a "reward" is 0. Fixed.
 
 Teams:
 -Two different team rankings were being used: one in the team corner and one in the gangwars menu. Fixed to use the one that does not cause overflow (and hence huge positive and negative integer scores in the team score files).
+
+Monsters:
+-Of interest here is two monster attributes: hitpoints and strength. Strength is supposed to be the attack power, and hitpoints is the starting hitpoints. Unfortunately, Jakob did something so that hitpoints was always calculated as a monster's strength * 3. So regardless of hitpoint setting, it was ignored and set to strength*3. This severely limited the usefulness of the monster editor, since strength was in effect used to calculate strength and hitpoints. I have now changed the code so that it honours the hitpoints setting. The monsters that ship with Usurper have now been modified so that their hitpoints are strength*3, instead of 0 (but of course we know that the 0 was meaningless since strength*3 was hard-coded). This is why the monster datafiles must be reset. In other places in the code (such as dungeon events, joining alchemist order, fighting demon), Jakob's hitpoint values will now be honoured (rather than just using strength*3). I do not know the outfall of my changes in these circumstances, and will continue to test.
+
 
 ----------
 
