--- a/changelog.txt
+++ b/changelog.txt
@@ -39,7 +39,7 @@ Dungeon:
 
 Bob's:
 -Fixed loop in drinking competition when inviting new participants
-
+-In drinking competition, if the initiating player lost then the "favourite" always won the competition and the competition ended with no further rounds. Fixed.
 
 ----------
 
