--- a/changelog.txt
+++ b/changelog.txt
@@ -10,6 +10,8 @@ Monsters:
 
 Experience:
 -Terrible bug where 10% of experience could be lost when both you and your opponent die in a teamfight. Fixed.
++Editor now allows float experience losses (e.g. 3.5%)
++Between 0 and 90% of experience can be lost now, as per the help text in the editor (before only 0-25% was accepted)
 
 ----------
 
