god deletion bug

--- a/changelog.txt
+++ b/changelog.txt
@@ -48,6 +48,9 @@ Online trading/dueling:
 Marrying:
 -Saying 'y' to paying for marriage when it was not a love-love relationship caused money to be wasted. Fixed (now it costs money only when marriage actually happens.) Found this one on an old Usurper forum.
 
+Gods:
+-Fixed horrendous bug that caused a player's god to be deleted if they simultaneously log-in on two nodes
+
 
 ----------
 
