--- a/changelog.txt
+++ b/changelog.txt
@@ -2,12 +2,19 @@ Pregnancy:
 -Two mails could be received for a pregnancy (telling you that you and then your partner were pregnant). Fixed.
 
 Scores:
--In the (e)quipment score rating, deleted players caused gaps in numbering. Fixed.
+-In the (e)quipment score rating, deleted players caused gaps in numbering. Fixed. (The other ones are broken too; have to fix those.)
 
 Status line:
 -STATUS OFF in usurp.ctl to disable the status bar did not work. Fixed.
 -Disabling the status bar screwed up inter-node processing (probably because status bar couldn't actually be disabled until my change above). Fixed.
 -f1 toggle did not work when status bar was disabled. Fixed.
+
+Maintenance:
+-NPCs never bought around-body armour. Fixed.
+
+Quests:
+-When creating a quest, monsters would be listed multiple times (not aggregated like in the dungeons). Fixed.
+
 
 
 ----------
