--- a/changelog.txt
+++ b/changelog.txt
@@ -2,7 +2,7 @@ Pregnancy:
 -Two mails could be received for a pregnancy (telling you that you and then your partner were pregnant). Fixed.
 
 Scores:
--In the (e)quipment score rating, deleted players caused gaps in numbering. Fixed. (The other ones are broken too; have to fix those.)
+-In the score ratings (equipment, weapon, armor, player killers, monster killers), deleted players caused gaps in numbering. Fixed. 
 
 Status line:
 -STATUS OFF in usurp.ctl to disable the status bar did not work. Fixed.
@@ -11,7 +11,7 @@ Status line:
 
 Maintenance:
 -NPCs never bought around-body armour. Fixed.
--The NPC king could be recruited to an NPC team. Fixed.
+-The NPC king could be recruited to an NPC team (so that he was king and in a team at the same time). Fixed.
 
 Quests:
 -When creating a quest, monsters would be listed multiple times (not aggregated like in the dungeons). Fixed.
