starting new ver

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,13 @@
+Sorting:
+-Sped up generation of player lists. (The shellsort Jakob used is fine but inefficient. I optimized the shellsort in one place but there are tons of duplicated copies of the code that should be fixed too.)
+
+Text:
+-Minor cleanup
+
+----------
+
+Version 0.23d:
+
 Pregnancy:
 -Two mails could be received for a pregnancy (telling you that you and then your partner were pregnant). Fixed.
 
