--- a/changelog.txt
+++ b/changelog.txt
@@ -15,6 +15,8 @@ Experience:
 Mail:
 -No more receiving mail out-of-order. The upshot is that sending mail (including the reams of auto-generated mail) is much faster, but scanning for new mail will be slower toward the end of the day on busy systems. Mail is now automatically packed at the start of maintenance. (Thanks Rick)
 
+Cosmetics:
+-Depositing/withdrawing in the treasury doesn't accept values if you have no gold to deposit/withdraw (i.e. it works like the bank now)
 
 ----------
 
