--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,9 @@
-Version github:
+Version 0.24:
+
+Upgrading:
+- As of 0.24 Usurper now includes an auto upgrader, built into EDITOR.  New versions will create a data file indicating the installed version when the game is reset, but old versions don't have that file so EDITOR will try to guess the installed version by looking at the NPCS.DAT file (which seems to change often).
+- Currently upgrading is only supported for versions 0.20e and newer (excluding the W32 versions of 0.21 and 0.21a) -- if you want to upgrade an older game, then you'll have to handle the steps manually (download each release between your version and 0.20e and apply the updates one by one)
+- TODO When Usurper loads it will check the version data file, and if it does not match the expected value, it will refuse to run until the upgrade (or reset) has taken place.  This is to ensure data corruption does not occur.
 
 ----------
 
